<resources>
    <string name="app_name" translatable="false">Weathery</string>
    <string name="meters_per_second">m/s</string>
    <string name="mm_hg">mm hg</string>
    <string name="hPa">hPa</string>
    <string name="mm">mm</string>
    <string name="minutes">min</string>
    <string name="clear">clear</string>
    <string name="partly_cloudy">partly cloudy</string>
    <string name="cloudy">cloudy</string>
    <string name="overcast">overcast</string>
    <string name="unknown_parameter_value">unknown parameter value</string>
    <string name="light_rain">light rain</string>
    <string name="rain">rain</string>
    <string name="heavy_rain">heavy rain</string>
    <string name="heavy_rain_thunderstorm">heavy rain, thunderstorm</string>
    <string name="sleet">sleet</string>
    <string name="light_snow">light snow</string>
    <string name="snow">snow</string>
    <string name="snowfall">snowfall</string>
    <string name="no_precipitation">no precipitation</string>
    <string name="light_rain_or_snow">light rain or snow</string>
    <string name="rain_or_snow">rain or snow</string>
    <string name="heavy_rain_or_snowfall">heavy rain or snowfall</string>
    <string name="heavy_downpour_or_snowstorm">heavy downpour or snowstorm</string>
    <string name="northwest">northwest</string>
    <string name="north">north</string>
    <string name="northeast">northeast</string>
    <string name="east">east</string>
    <string name="southeast">southeast</string>
    <string name="south">south</string>
    <string name="southwest">southwest</string>
    <string name="west">west</string>
    <string name="calm">calm</string>
    <string name="light">light</string>
    <string name="dark">dark</string>
    <string name="summer">summer</string>
    <string name="autumn">autumn</string>
    <string name="winter">winter</string>
    <string name="spring">spring</string>
    <string name="full_moon">full moon</string>
    <string name="decreasing_moon">decreasing moon</string>
    <string name="last_quarter">last quarter</string>
    <string name="new_moon">new moon</string>
    <string name="first_quarter">first quarter</string>
    <string name="growing_moon">growing moon</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="forecast">Forecast</string>
    <string name="current_weather">Current weather</string>
    <string name="observation_time">Observation time</string>
    <string name="observation_time_value">Observation time value</string>
    <string name="temperature">Temperature</string>
    <string name="temperature_value">Temperature value</string>
    <string name="feels_like_temperature">Feels like temperature</string>
    <string name="feels_like_temperature_value">Feels like temperature value</string>
    <string name="condition">Condition</string>
    <string name="condition_value">Condition value</string>
    <string name="wind_speed">Wind speed</string>
    <string name="wind_speed_value">Wind speed value</string>
    <string name="wind_gusts_speed">Wind gusts speed</string>
    <string name="wind_gusts_speed_value">Wind gusts speed value</string>
    <string name="wind_direction">Wind direction</string>
    <string name="wind_direction_value">Wind direction value</string>
    <string name="atmospheric_pressure">Atmospheric pressure</string>
    <string name="atmospheric_pressure_mm_hg">Atmospheric pressure (mm hg)</string>
    <string name="atmospheric_pressure_value">Atmospheric pressure value</string>
    <string name="atmospheric_pressure_mm_hg_value">Atmospheric pressure (mm hg) value</string>
    <string name="atmospheric_pressure_hPa">Atmospheric pressure (hPa)</string>
    <string name="atmospheric_pressure_hPa_value">Atmospheric pressure (hPa) value</string>
    <string name="humidity">Humidity</string>
    <string name="humidity_value">Humidity value</string>
    <string name="precipitation_type">Precipitation type</string>
    <string name="precipitation_type_value">Precipitation type value</string>
    <string name="precipitation_strength">Precipitation strength</string>
    <string name="precipitation_strength_value">Precipitation strength value</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="cloudiness_value">Cloudiness value</string>
    <string name="daytime">Daytime</string>
    <string name="daytime_value">Daytime value</string>
    <string name="is_there_polar">Is there polar day or night</string>
    <string name="is_there_polar_value">Is there polar day or night value</string>
    <string name="season">Season</string>
    <string name="season_value">Season value</string>
    <string name="moon_phase">Moon phase</string>
    <string name="moon_phase_value">Moon phase value</string>
    <string name="sunrise_time">Sunrise time</string>
    <string name="sunrise_time_value">Sunrise time value</string>
    <string name="sunset_time">Sunset time</string>
    <string name="sunset_time_value">Sunset time value</string>
    <string name="local_time">Local time</string>
    <string name="local_time_value">Local time value</string>
    <string name="precipitation">Precipitation</string>
    <string name="precipitation_in_mm">Precipitation (mm)</string>
    <string name="precipitation_value">Precipitation value</string>
    <string name="precipitation_in_mm_value">Precipitation (mm) value</string>
    <string name="precipitation_in_minutes">Precipitation (min)</string>
    <string name="precipitation_in_minutes_value">Precipitation (min) value</string>
    <string name="title">Title</string>
    <string name="minimum_temperature">Minimum temperature</string>
    <string name="minimum_temperature_value">Minimum temperature value</string>
    <string name="average_temperature">Average temperature</string>
    <string name="average_temperature_value">Average temperature</string>
    <string name="maximum_temperature">Maximum temperature</string>
    <string name="maximum_temperature_value">Maximum temperature value</string>
    <string name="meters">meters</string>
    <string name="description">Description</string>
    <string name="description_value">Description value</string>
    <string name="visibility">Visibility</string>
    <string name="visibility_value">Visibility value</string>
    <string name="yandex_weather">Yandex.Weather</string>
    <string name="open_weather_map" translatable="false">Open Weather Map</string>
    <string name="unknown_informational_code_1xx">Unknown informational code (1xx)</string>
    <string name="_continue">Continue</string>
    <string name="switching_protocols">Switching protocols</string>
    <string name="processing">Processing</string>
    <string name="unknown_success_code_2xx">Unknown success code (2xx)</string>
    <string name="ok">OK</string>
    <string name="created">Created</string>
    <string name="accepted">Accepted</string>
    <string name="non_authoritative_information">Non-authoritative information</string>
    <string name="no_content">No content</string>
    <string name="reset_content">Reset content</string>
    <string name="partial_content">Partial content</string>
    <string name="multi_status">Multi-status</string>
    <string name="already_reported">Already reported</string>
    <string name="im_used">IM used</string>
    <string name="unknown_error_3xx">Unknown redirection code (3xx)</string>
    <string name="multiple_choices">Multiple choices</string>
    <string name="moved_permanently">Moved permanently</string>
    <string name="found_or_moved_temporarily">Found or Moved temporarily</string>
    <string name="see_other">See other</string>
    <string name="not_modified">Not modified</string>
    <string name="use_proxy">Use proxy</string>
    <string name="temporary_redirect">Temporary redirect</string>
    <string name="permanent_redirect">Permanent redirect</string>
    <string name="unknown_error_4xx">Unknown client error (4xx)</string>
    <string name="bad_request">Bad request</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="payment_required">Payment required</string>
    <string name="forbidden">Forbidden</string>
    <string name="not_found">Not found</string>
    <string name="method_not_allowed">Method not allowed</string>
    <string name="not_acceptable">Not acceptable</string>
    <string name="proxy_authentication_required">Proxy authentication required</string>
    <string name="request_timeout">Request timeout</string>
    <string name="conflict">Conflict</string>
    <string name="gone">Gone</string>
    <string name="length_required">Length required</string>
    <string name="precondition_failed">Precondition failed</string>
    <string name="payload_too_large">Payload too large</string>
    <string name="uri_too_long">URI too long</string>
    <string name="unsupported_media_type">Unsupported media type</string>
    <string name="range_not_satisfiable">Range not satisfiable</string>
    <string name="expectation_failed">Expectation failed</string>
    <string name="im_a_teapot">I’m a teapot</string>
    <string name="misdirected_request">Misdirected request</string>
    <string name="unprocessable_entity">Unprocessable entity</string>
    <string name="locked">Locked</string>
    <string name="failed_dependency">Failed dependency</string>
    <string name="upgrade_required">Upgrade required</string>
    <string name="precondition_required">Precondition required</string>
    <string name="too_many_requests">Too many requests</string>
    <string name="request_header_fields_too_large">Request header fields too large</string>
    <string name="requested_host_unavailable">Requested host unavailable</string>
    <string name="retry_with">Retry with</string>
    <string name="unavailable_for_legal_reasons">Unavailable for legal reasons</string>
    <string name="unknown_error_5xx">Unknown server error (5xx)</string>
    <string name="internal_server_error">Internal server error</string>
    <string name="not_implemented">Not implemented</string>
    <string name="bad_gateway">Bad gateway</string>
    <string name="service_unavailable">Service unavailable</string>
    <string name="gateway_timeout">Gateway timeout</string>
    <string name="http_version_not_supported">HTTP version not supported</string>
    <string name="variant_also_negotiates">Variant also negotiates</string>
    <string name="insufficient_storage">Insufficient storage</string>
    <string name="loop_detected">Loop detected</string>
    <string name="bandwidth_limit_exceeded">Bandwidth limit exceeded</string>
    <string name="not_extended">Not extended</string>
    <string name="network_authentication_required">Network authentication required</string>
    <string name="unknown_error">Unknown error</string>
    <string name="rain_volume_for_last_3_hours">Rain volume for last 3 hours</string>
    <string name="rain_volume_for_last_3_hours_value">Rain volume for last 3 hours value</string>
    <string name="atmospheric_pressure_on_the_ground_level">Atmospheric pressure on the ground level</string>
    <string name="atmospheric_pressure_on_the_ground_level_value">Atmospheric pressure on the ground level value</string>
    <string name="atmospheric_pressure_on_the_sea_level">Atmospheric pressure on the sea level</string>
    <string name="atmospheric_pressure_on_the_sea_level_value">Atmospheric pressure on the sea level value</string>
    <string name="last_known">Last known</string>
    <string name="by_gps">By GPS</string>
    <string name="by_map">By map</string>
    <string name="date_value">Date value</string>
    <string name="forecast_time">Forecast time</string>
    <string name="application_need_to_know_your_location_which_location_do_you_want_to_use">
        Application need to know your location. Which location do you want to use?</string>
    <string name="specify_current_location">Specify current location</string>
</resources>