<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/subitem_owm_forecast_SV"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="gone"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.google.android.material.card.MaterialCardView
        style="@style/MyMaterialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical">

                <TextView
                    style="@style/MyMaterialSecondarySubtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/forecast_time"
                    android:text="@string/forecast_time" />

                <TextView
                    android:id="@+id/date_value_OWM_F_TV"
                    style="@style/MyMaterialPrimaryBody1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/date_value" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical">

                <TextView
                    style="@style/MyMaterialSecondarySubtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/temperature"
                    android:text="@string/temperature" />

                <TextView
                    android:id="@+id/temperature_value_OWM_F_TV"
                    style="@style/MyMaterialPrimaryBody1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/temperature" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/MyMaterialSecondarySubtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/daytime"
                    android:text="@string/daytime" />

                <TextView
                    android:id="@+id/day_time_value_OWM_F_TV"
                    style="@style/MyMaterialPrimaryBody1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/daytime" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical">

                <TextView
                    style="@style/MyMaterialSecondarySubtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cloudiness"
                    android:text="@string/cloudiness" />

                <TextView
                    android:id="@+id/cloudiness_value_OWM_F_TV"
                    style="@style/MyMaterialPrimaryBody1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cloudiness" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical">

                <TextView
                    style="@style/MyMaterialSecondarySubtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/humidity"
                    android:text="@string/humidity" />

                <TextView
                    android:id="@+id/humidity_value_OWM_F_TV"
                    style="@style/MyMaterialPrimaryBody1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/humidity" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical">

                <TextView
                    style="@style/MyMaterialSecondarySubtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/rain_volume_for_last_3_hours"
                    android:text="@string/rain_volume_for_last_3_hours" />

                <TextView
                    android:id="@+id/rain_volume_value_OWM_F_TV"
                    style="@style/MyMaterialPrimaryBody1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/rain_volume_for_last_3_hours_value" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical">

                <TextView
                    style="@style/MyMaterialSecondarySubtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/description"
                    android:text="@string/description" />

                <TextView
                    android:id="@+id/weather_description_value_OWM_F_TV"
                    style="@style/MyMaterialPrimaryBody1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/description" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MyMaterialSecondarySubtitle1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/wind_speed"
                        android:text="@string/wind_speed" />

                    <TextView
                        android:id="@+id/wind_speed_value_OWM_F_TV"
                        style="@style/MyMaterialPrimaryBody1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/wind_speed" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MyMaterialSecondarySubtitle1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/wind_direction"
                        android:text="@string/wind_direction" />

                    <TextView
                        android:id="@+id/wind_direction_value_OWM_F_TV"
                        style="@style/MyMaterialPrimaryBody1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/wind_direction" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MyMaterialSecondarySubtitle1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/atmospheric_pressure_on_the_ground_level"
                        android:text="@string/atmospheric_pressure_on_the_ground_level" />

                    <TextView
                        android:id="@+id/atmospheric_pressure_on_the_ground_level_in_hPa_value_OWM_F_TV"
                        style="@style/MyMaterialPrimaryBody1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/atmospheric_pressure_on_the_ground_level_value" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MyMaterialSecondarySubtitle1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/atmospheric_pressure_on_the_sea_level"
                        android:text="@string/atmospheric_pressure_on_the_sea_level" />

                    <TextView
                        android:id="@+id/atmospheric_pressure_on_the_sea_level_in_hPa_value_OWM_F_TV"
                        style="@style/MyMaterialPrimaryBody1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/atmospheric_pressure_on_the_sea_level_value" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</ScrollView>
