<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:orientation="horizontal"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="20dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/moonTextTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/moon_phase"
                android:gravity="center_horizontal"
                android:text="@string/moon_phase"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/moonTextValueTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/moon_phase_value"
                android:gravity="center_horizontal"
                android:text="@string/moon_phase_value"
                android:textAppearance="?attr/textAppearanceListItem" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sunLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sunriseTimeTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/sunrise_time"
                    android:gravity="center"
                    android:text="@string/sunrise_time"
                    android:textAppearance="?attr/textAppearanceListItem" />

                <TextView
                    android:id="@+id/sunriseTimeValueTV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:contentDescription="@string/sunrise_time_value"
                    android:gravity="center"
                    android:text="@string/sunrise_time_value"
                    android:textAppearance="?attr/textAppearanceListItem" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sunsetTimeTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/sunset_time"
                    android:gravity="center"
                    android:text="@string/sunset_time"
                    android:textAppearance="?attr/textAppearanceListItem" />

                <TextView
                    android:id="@+id/sunsetTimeValueTV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:contentDescription="@string/sunset_time_value"
                    android:gravity="center"
                    android:text="@string/sunset_time_value"
                    android:textAppearance="?attr/textAppearanceListItem" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/yandex_12_hours_forecast_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:clipToPadding="false"
                android:scrollbars="vertical"
                tools:listitem="@layout/item_yandex_time_of_day_forecast" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/yandex_hours_forecast_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scrollbars="vertical"
                tools:listitem="@layout/item_yandex_hour_forecast" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
